--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,11 @@
       href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;400;500&family=Rubik:wght@300;400;500;600&display=swap"
       rel="stylesheet"
     />
-    
-<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -30,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Pedgog Trainer Rating</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
